--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
               
                 <div class="row text-center bol"><i class="fa fa-circle"></i></div>
                 <h1 class="form-signin-heading text-center">
-                    Sign In
+                    Log In
                 </h1>
                 <hr class="spartan">
                 <p id = "problem"></p>
