--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <h2 id="error-display" class="error">
             <hr style="margin-bottom:2em;"><b id="error-text">No Data Select </b></h2>
-        <div id="display-section" style="display:none;">
+        <div id="display-section" class="display-hide">
             <div class="container margin-top-1">
                 <div class="row export-btn">
                     <div style="float:right">
@@ -209,7 +209,6 @@
     <div id="footer">
         <p>	&copy; Copyright 2017 	&mdash; Whiteline Tech</p>
     <div>
-    
 </body>
 
 
